feat: completed all methods and tests